--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <meta name="author" content="">
  <link rel="shortcut icon" href="favicon.ico">
  <link rel="apple-touch-icon" href="icon.png" />
-   <title>TITLE</title>
+   <title>Rasmus Flindt</title>
    <!-- Bootstrap core CSS -->
    <link href="css/bootstrap.css" rel="stylesheet">
    <link rel="stylesheet" href="css/font-awesome.min.css">
