--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <div class="container">
 	 <div class="row"> 
        <div class="col-lg-2 col-lg-offset-1">
-		 <img src="rasmus.png" alt="Rasmus Flindt profile picture" class="raspicture">
+		 <img src="Rasmus.png" alt="Rasmus Flindt profile picture" class="raspicture">
        </div>
        <div class="col-lg-6">
 <p>I have found myself motivated in the realm of people and technology. People because I am a socially driven and eccentric individual and technology because I am naturally obsessed with innovations and futuristic stuff from Black Mirror. I started off working with IT-operations in NNIT, which later led me to a more strategic connection to my degree in business administration and psychology in TDC/Nuuday. I aspire to be one of the greatest agile practitioners because I can connect all of my beliefs on business, motivation, and decision-making with the development of seriously cool stuff that benefits the customer in the end.</p>
