--- a/index.html
+++ b/index.html
@@ -150,7 +150,17 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>CERTIFICATES</h5>
 				</div>
-				<!-- EDIT: certificate line 1 -->
+			<!-- EDIT: certificate line 1 -->
+				<div class="col-lg-6">
+					<p><t>Certified SAFe® 5 DevOps Practicioner</t><br/>
+						 Scaled Agile, Inc.
+						<!--<br/><i>Extra info here</i>-->
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2022</sm><br/>
+					</p>
+				<!-- EDIT: certificate line 2 -->
 				<div class="col-lg-6">
 					<p><t>Enterprise Design Thinking Practitioner</t><br/>
 						IBM, Inc.
@@ -161,9 +171,9 @@
 					<p><sm>2022</sm><br/>
 					</p>
 				</div>
-				<!-- EDIT: certificate line 2 -->
+				<!-- EDIT: certificate line 3 -->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Agile Explorer</t><br/>
+					<p><t>Agile Achiever</t><br/>
 						 IBM, Inc.
 						<!--<br/><i>Extra info here</i>-->
 					</p>
@@ -171,7 +181,7 @@
 				<div class="col-lg-3">
 					<p><sm>2021</sm></p>
 				</div>
-				<!-- EDIT: certificate line 3 -->
+				<!-- EDIT: certificate line 4 -->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Certified SAFe® 5 Agilist</t><br/>
 						 Scaled Agile, Inc.
@@ -181,7 +191,7 @@
 				<div class="col-lg-3">
 					<p><sm>2021</sm></p>
 				</div>
-				<!-- EDIT: certificate line 4 -->
+				<!-- EDIT: certificate line 5 -->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Professional Scrum Master 1</t><br/>
 						 Scrum.org, Inc.
