--- a/index.html
+++ b/index.html
@@ -150,7 +150,17 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>CERTIFICATES</h5>
 				</div>
-
+			
+				<!-- EDIT: certificate line 1 -->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p><t>Certified SAFe® 5 DevOps Practitioner</t><br/>
+						 Scaled Agile, Inc.
+						<!--<br/><i>Extra info here</i>-->
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2022</sm></p>
+				</div>
 				<!-- EDIT: certificate line 2 -->
 				<div class="col-lg-6">
 					<p><t>Enterprise Design Thinking Practitioner</t><br/>
