--- a/index.html
+++ b/index.html
@@ -70,17 +70,27 @@
 				</div>
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-6">
+					<p class="tight"><t>Agile Transformation Consultant </t><br/>
+						Novo Nordisk A/S <br/>
+					</p>
+					<p><more>Working strategically on Scaling Agile in the Lean Agile Center of Excellence in Global IT. Strengthening a Scaled Agile community by administering our Microsoft Azure DevOps practice and providing training and guidance in using the tool. Conducting and maintaining a portfolio of training and coaching in Agile Ways of Working to our ART's across our organization.</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2022 - CURRENT <br />
+					COPENHAGEN, DENMARK</sm></p>
+				</div>
+				<!-- EDIT: work line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Agile Consultant </t><br/>
 						IBM, Inc. <br/>
 					</p>
 					<p><more>Working with various clients on software delivery projects - including SAP S/4 HANA, cloud, and web development. Also coached and trained newcoming Agile consultants in Agile WoW.</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>2021 - CURRENT <br />
+					<p><sm>2021 - 2022 <br />
 					COPENHAGEN, DENMARK</sm></p>
-				</div>
-				
-				<!-- EDIT: work line 2-->
+				</div>				
+				<!-- EDIT: work line 3-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Agile Coach</t><br/>
 						Nuuday A/S <br/>
@@ -93,7 +103,7 @@
 					<p><sm> 2019 - 2021 <br />
 					COPENHAGEN, DENMARK</sm></p>
 				</div>
-				<!-- EDIT: work line 3-->
+				<!-- EDIT: work line 4-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>IT Operations Assistant</t><br/>
 						NNIT A/S <br/>
